[package]
name = "wasm-astar"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = 3


[dependencies]
getrandom = { version = "0.2.8", features = ["js"] }
js-sys = "0.3.61"
noise = "0.8.2"
rand = "0.8.5"
wasm-bindgen = "0.2.84"

[dependencies.web-sys]
version = "^0.3"
features = [ "console" ]
